# subwave

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: spindle_event_decomp_waveforms.npz
docs/: tensor_spec.html
src/subwave/: __init__.py  clustering.py  comparison.py  core.py  dataset.py  decomposition.py  io.py  lwf.py  plotting.py  result.py  selection.py  storage.py  tensor.py  tensor_decomp.py
src/subwave/spindles/: __init__.py  alignment.py  filters.py  templates.py
src/subwave/validation/: __init__.py  metrics.py  stability.py  synthetic.py
tests/: conftest.py  test_clustering.py  test_comparison.py  test_dataset.py  test_decompose.py  test_io.py  test_lwf.py  test_plotting.py  test_selection.py  test_serialization.py  test_spindles.py  test_tensor.py  test_tensor_decomp.py  test_validation.py
