[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subwave"
dynamic = ["version"]
description = "Matrix decomposition of neurophysiological event waveform populations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Lorcan Purcell", email = "1w3r5yviper2077@gmail.com" }]
requires-python = ">=3.9"
keywords = ["sleep", "EEG", "spindle", "decomposition", "NMF", "SVD"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "pandas>=1.3",
]

[project.optional-dependencies]
mne = ["mne>=1.0"]
yasa = ["yasa>=0.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.21",
]

[project.urls]
Repository = "https://github.com/Lorcan7274/subwave"

[tool.hatch.version]
path = "src/subwave/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/subwave"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/subwave"]
